--- a/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
+++ b/deep-learning-fundamentals/unit08-NLP/01-bag-of-words/02_self_attention_from_scratch.ipynb
@@ -79,7 +79,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2f356b28-f58c-4e99-8bfb-d2dab66fbd56"
+        "outputId": "b9aa465f-f549-454a-d4ea-f8529f408ba0"
       },
       "outputs": [
         {
@@ -110,7 +110,7 @@
       ],
       "metadata": {
         "id": "-vCUMM0OYA5k",
-        "outputId": "79d016ba-2eff-4e4d-a4d2-8a56f330c3b4",
+        "outputId": "eb9df2ce-7c93-4f35-bff4-2c77188ad096",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -139,7 +139,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4e293bd-f96e-4a80-d92d-64b7d7b77743"
+        "outputId": "77dafb0b-d1c4-4aad-ffc5-19f81ea60f9f"
       },
       "outputs": [
         {
@@ -211,7 +211,7 @@
       ],
       "metadata": {
         "id": "5SLyXO8CZqVW",
-        "outputId": "0423bdcc-9d99-4bfb-d8ce-c1de9a510e96",
+        "outputId": "095a84a0-6941-4f52-e200-f8d89b0bd1cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -247,7 +247,7 @@
       "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f",
       "metadata": {
         "id": "65d50678-3ab0-4075-ab50-3c12e63fd95f",
-        "outputId": "87fa5f84-8a18-4d1a-b09f-f12e334437fe",
+        "outputId": "8f018beb-fcfb-485e-e4be-1b806a6ebed7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -282,7 +282,7 @@
       "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
       "metadata": {
         "id": "03491130-ad33-4fb7-8ed2-12de9662d400",
-        "outputId": "b8d3aa40-9ef3-4c6b-c409-c7aba6410717",
+        "outputId": "3dfae41b-ac43-40a8-83cd-3f9bd6087133",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -315,7 +315,7 @@
       "id": "12dd8956-f4db-410b-94c0-78190a8881cf",
       "metadata": {
         "id": "12dd8956-f4db-410b-94c0-78190a8881cf",
-        "outputId": "adc75d5a-9fa5-4bb1-a297-d8bbe52ce294",
+        "outputId": "d0176a2d-5f04-4e4d-eb9b-301ba441cd4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -360,7 +360,7 @@
       "id": "9e42b356-2aad-4447-b714-be0880df3c6c",
       "metadata": {
         "id": "9e42b356-2aad-4447-b714-be0880df3c6c",
-        "outputId": "5f5d870a-ed01-4892-b8b6-f782088c4c4d",
+        "outputId": "b8bd502c-74cb-42c3-9a9f-ea18d12fc82f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -386,7 +386,7 @@
       "id": "3f185b5b-b7b2-4660-b6df-8c6faee8bf19",
       "metadata": {
         "id": "3f185b5b-b7b2-4660-b6df-8c6faee8bf19",
-        "outputId": "ecadcf8f-c911-467e-b43f-4316ba868058",
+        "outputId": "919ebe03-6ec0-4ae6-b6f6-d41625ea356d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -416,7 +416,7 @@
       ],
       "metadata": {
         "id": "Yiqyr6mQsOmz",
-        "outputId": "d02ccfac-ddfa-4ef9-8a13-c667c3be96d6",
+        "outputId": "c96ced13-39ac-4e5b-d793-1bbd482569bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -460,7 +460,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2999ee64-4964-42d6-cbc3-b9880352fbd6"
+        "outputId": "5827fe26-f3c8-4b35-92f1-cf32f7e69ddb"
       },
       "id": "UbozZ3ZSGmjF",
       "execution_count": 13,
@@ -484,7 +484,7 @@
       ],
       "metadata": {
         "id": "IAWTtYdGtOMH",
-        "outputId": "4862254d-a6ce-4421-d235-22b4f4b18902",
+        "outputId": "a58af63b-96ca-409d-f996-55b00caae589",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -526,7 +526,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "17e28873-e920-44c8-b457-a2b992c9c8bb"
+        "outputId": "6af5b361-1c4d-4eb0-87a5-5cf2807fdd1e"
       },
       "outputs": [
         {
@@ -556,7 +556,7 @@
       ],
       "metadata": {
         "id": "YfsaCo8jt93L",
-        "outputId": "41665cb5-4752-41cc-fe77-09967996e4cc",
+        "outputId": "b582b1e1-897a-4dc7-b2f2-0db557daba87",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -587,7 +587,7 @@
       ],
       "metadata": {
         "id": "xA-qcIq-tla0",
-        "outputId": "ad8d2c92-f9ab-4b92-cc2a-0c0cd1a4f639",
+        "outputId": "d256419f-3fb8-419e-f02e-382aaafc10ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -651,7 +651,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CxfOCNguqbtF",
-        "outputId": "850edea5-2162-4c1d-9ba7-08e67c1f248f"
+        "outputId": "b318ff9e-4052-4a15-b746-3416df10268f"
       },
       "id": "CxfOCNguqbtF",
       "execution_count": 18,
@@ -695,10 +695,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbbffc62-c066-40c9-86b7-bf9c040f6755"
+        "outputId": "dfd73678-7b6a-4e4c-9239-7589b65ace7c"
       },
       "id": "1j_PgpHMrFng",
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,10 +721,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "btqWaxYpUMJJ",
-        "outputId": "27937b00-e996-4a2d-fc72-408820e6dffa"
+        "outputId": "38f84cdf-56a1-4897-c783-e9188530712f"
       },
       "id": "btqWaxYpUMJJ",
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,10 +749,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mngmyS2uUgkK",
-        "outputId": "b7ce6c57-98a7-44ba-c37e-5fda41183929"
+        "outputId": "0f04360c-0b3b-4092-f4a9-6f4500390c42"
       },
       "id": "mngmyS2uUgkK",
-      "execution_count": 23,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -762,7 +762,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 21
         }
       ]
     },
@@ -776,10 +776,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4HsrfRVrUuNG",
-        "outputId": "e6308921-7fcc-4321-f7a6-54c46a543ff9"
+        "outputId": "3ad8da30-f4f6-46d2-b651-70f5e46745b7"
       },
       "id": "4HsrfRVrUuNG",
-      "execution_count": 24,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,10 +802,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jQ4JRvSSVbXF",
-        "outputId": "3cf3c65f-23dc-44f5-9444-0fe831b999f3"
+        "outputId": "42a72b58-fc51-4dea-a6fc-80f407a0c4da"
       },
       "id": "jQ4JRvSSVbXF",
-      "execution_count": 25,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -815,7 +815,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 23
         }
       ]
     },
@@ -834,10 +834,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q3c0RapJVvHX",
-        "outputId": "cfe15c3f-f3bc-4c46-c301-70221ca6a3f9"
+        "outputId": "f4597a89-6e54-48a0-bc54-34ebe1b03b42"
       },
       "id": "q3c0RapJVvHX",
-      "execution_count": 82,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,10 +864,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IS5L8d-4WPjz",
-        "outputId": "c3288b85-7766-41d3-d5de-068fc19cfcdc"
+        "outputId": "5890f3be-8867-43d0-9450-4f216c033ce7"
       },
       "id": "IS5L8d-4WPjz",
-      "execution_count": 83,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,10 +890,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_2ASwmBhYBNc",
-        "outputId": "09f5998d-618e-4a04-fcfa-a2718cd90a7f"
+        "outputId": "f9e03136-2a73-4b60-c237-f971e574e1aa"
       },
       "id": "_2ASwmBhYBNc",
-      "execution_count": 76,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -915,16 +915,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8eKSEQdTZyhZ",
-        "outputId": "288ec665-d354-4411-d37b-b9f66be0e0ac"
+        "outputId": "793f0349-8ddc-4af8-e990-32caf130788b"
       },
       "id": "8eKSEQdTZyhZ",
-      "execution_count": 80,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "multihead_queries shape: torch.Size([6, 24, 3])\n"
+            "multihead_queries shape: torch.Size([24, 3, 6])\n"
           ]
         }
       ]
@@ -934,32 +934,15 @@
       "source": [
         "# let’s compute the ω values for all query and key\n",
         "# (3, 24, 6)(3, 6, 24) = (3, 24, 24)\n",
-        "omegas = multihead_queries.bmm(multihead_keys)\n",
-        "print(omegas.shape)"
+        "#omegas = multihead_queries.bmm(multihead_keys)\n",
+        "#print(omegas.shape)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
-        },
-        "id": "85phxx3LZrjJ",
-        "outputId": "7ab33fd0-fecf-4ed0-8f2f-be09c59a0f46"
+        "id": "85phxx3LZrjJ"
       },
       "id": "85phxx3LZrjJ",
-      "execution_count": 84,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-84-eec0071f11be>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# let’s compute the ω values for all query and key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# (3, 24, 6)(3, 6, 24) = (3, 24, 24)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0momegas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultihead_query_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultihead_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0momegas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: batch1 must be a 3D tensor"
-          ]
-        }
-      ]
+      "execution_count": 29,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -973,16 +956,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5kkaObFPZVxP",
-        "outputId": "d3df3550-adcd-474a-dd99-91a01602a989"
+        "outputId": "3aa81f2d-bb46-4403-eadf-094212692511"
       },
       "id": "5kkaObFPZVxP",
-      "execution_count": 72,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([3, 24, 24])\n"
+            "torch.Size([6, 6])\n"
           ]
         }
       ]
@@ -990,58 +973,40 @@
     {
       "cell_type": "code",
       "source": [
-        "attention_weights = attention_weights.permute(0, 2, 1)\n",
-        "print(f\"attention_weights shape: {attention_weights.shape}\")"
+        "#attention_weights = attention_weights.permute(0, 2, 1)\n",
+        "#print(f\"attention_weights shape: {attention_weights.shape}\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7Gq4ZdLwbhNe",
-        "outputId": "510943d4-8334-41de-fa2a-018beddb817e"
+        "id": "7Gq4ZdLwbhNe"
       },
       "id": "7Gq4ZdLwbhNe",
-      "execution_count": 63,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "attention_weights shape: torch.Size([3, 6, 6])\n"
-          ]
-        }
-      ]
+      "execution_count": 32,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# let’s compute the context vector for all\n",
         "# (3, 24, 24)(3, 6, 28) = (3, 24, 24)\n",
-        "context_vector = attention_weights.bmm(multihead_values.T)\n",
+        "#context_vector = attention_weights.bmm(multihead_values.T)\n",
         "\n",
-        "print(context_vector.shape)\n",
-        "print(context_vector)"
+        "print(context_vector.shape)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
+          "base_uri": "https://localhost:8080/"
         },
         "id": "HaPDeUErbFTc",
-        "outputId": "5223f550-60e8-4763-f9f8-5cbb67781030"
+        "outputId": "eada6db4-6de5-40f9-eec9-7b44b4adafd6"
       },
       "id": "HaPDeUErbFTc",
-      "execution_count": 73,
+      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-73-96c71b81174c>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# let’s compute the context vector for all\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# (3, 24, 24)(3, 6, 28) = (3, 24, 24)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcontext_vector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mattention_weights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultihead_values\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontext_vector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: Expected size for first two dimensions of batch2 tensor to be: [3, 24] but got: [28, 6]."
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([6, 28])\n"
           ]
         }
       ]
@@ -1057,14 +1022,109 @@
       "id": "St2JwcEyhOmv"
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Note that the queries usually come from the decoder, and the keys and values usually come from the encoder."
+      ],
       "metadata": {
-        "id": "ZXa7dVhvhQhO"
+        "id": "ZLXAK_Q0tVLU"
+      },
+      "id": "ZLXAK_Q0tVLU"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(123)\n",
+        "\n",
+        "d = embedded_sentence.shape[1]\n",
+        "print(f\"embedded_sentence shape: {embedded_sentence.shape}\")\n",
+        "\n",
+        "d_q, d_k, d_v = 24, 24, 28\n",
+        "\n",
+        "W_Q = torch.nn.Parameter(torch.rand(d_q, d))\n",
+        "W_K = torch.nn.Parameter(torch.rand(d_k, d))\n",
+        "W_V = torch.nn.Parameter(torch.rand(d_v, d))\n",
+        "\n",
+        "x_2 = embedded_sentence[1]\n",
+        "query_2 = W_Q.matmul(x_2)\n",
+        "print(f\"query shape: {query_2.shape}\")\n",
+        "\n",
+        "keys = W_Q.matmul(embedded_sentence.T).T\n",
+        "values = W_V.matmul(embedded_sentence.T).T\n",
+        "print(f\"keys shape: {keys.shape}\")\n",
+        "print(f\"values shape: {values.shape}\")"
+      ],
+      "metadata": {
+        "id": "ZXa7dVhvhQhO",
+        "outputId": "938b1b56-6389-4353-fbe6-b95bcf19d711",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "ZXa7dVhvhQhO",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "embedded_sentence shape: torch.Size([6, 16])\n",
+            "query shape: torch.Size([24])\n",
+            "keys shape: torch.Size([6, 24])\n",
+            "values shape: torch.Size([6, 28])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The only part that changes in cross attention is that we now have a second input sequence, for example, a second sentence with 8 instead of 6 input elements."
+      ],
+      "metadata": {
+        "id": "frlhSE-FvQqm"
+      },
+      "id": "frlhSE-FvQqm"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedded_sentence_2 = torch.rand(8, 16)  # 2nd input sequence\n",
+        "\n",
+        "keys = W_Q.matmul(embedded_sentence_2.T).T\n",
+        "values = W_V.matmul(embedded_sentence_2.T).T\n",
+        "print(f\"keys shape: {keys.shape}\")\n",
+        "print(f\"values shape: {values.shape}\")"
+      ],
+      "metadata": {
+        "id": "fD1-JIQOvRYF",
+        "outputId": "f5b3c723-02a7-4833-9feb-33f3cfd6dbd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "fD1-JIQOvRYF",
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "keys shape: torch.Size([8, 24])\n",
+            "values shape: torch.Size([8, 28])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Notice that compared to self-attention, the keys and values now have 8 instead of 6 rows. Everything else stays the same."
+      ],
+      "metadata": {
+        "id": "qrl2hVIevn4h"
+      },
+      "id": "qrl2hVIevn4h"
     }
   ],
   "metadata": {
