--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBLIa35oxBgMSsso75Z5rM",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPY0Ix+TGNsM/ezypHuxXJo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +42,7 @@
         "We’ll start our NLP journey by following the steps of Alice and Dorothy, from\n",
         "[Alice’s Adventures in Wonderland](https://ota.bodleian.ox.ac.uk/repository/xmlui/handle/20.500.12024/1476) by Lewis Carroll and [The Wonderful Wizard of Oz](https://ota.bodleian.ox.ac.uk/repository/xmlui/handle/20.500.12024/1740) by L. Frank Baum.\n",
         "\n",
-        "![](images/alice_dorothy.png?raw=1)\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/alice_dorothy.png?raw=1)\n",
         "\n",
         "*Left: \"Alice and the Baby Pig\" illustration by John Tenniel's, from \"Alice's Adventure's in Wonderland\" (1865).*\n",
         "\n",
@@ -80,7 +81,7 @@
       "metadata": {
         "id": "bPp9LPHbWch9"
       },
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -105,7 +106,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9be10ba9-f360-442b-c126-faf0e23b7daf"
+        "outputId": "db35c65b-3f74-4971-c614-839d0e205a1b"
       },
       "execution_count": 2,
       "outputs": [
@@ -147,7 +148,18 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 1,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nltk.download('punkt')"
+      ],
+      "metadata": {
+        "id": "lrnHpAEYgrSS"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +174,7 @@
       "metadata": {
         "id": "dEQBv2ddXGS_"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -183,7 +195,7 @@
       "metadata": {
         "id": "w1HKtpREXdlF"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -206,7 +218,7 @@
       "metadata": {
         "id": "eTXbiieBX4Sz"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -249,15 +261,15 @@
         "  # The actual texts of the books are contained between lines 105 and 3703\n",
         "  alice_text = \"\".join(f.readlines()[104:3704])\n",
         "\n",
-        "wizoz_file = os.path.join(HOME_DIR, \"wizoz10-1740.txt\")\n",
-        "with open(wizoz_file, \"r\") as f:\n",
+        "wizard_file = os.path.join(HOME_DIR, \"wizoz10-1740.txt\")\n",
+        "with open(wizard_file, \"r\") as f:\n",
         "  # The actual texts of the books are contained between lines 309 and 5099\n",
-        "  wizoz_text = \"\".join(f.readlines()[310:5100])"
+        "  wizard_text = \"\".join(f.readlines()[310:5100])"
       ],
       "metadata": {
         "id": "8z29BFQwZx4U"
       },
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -272,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tNZmtkHNahrp",
-        "outputId": "4814a716-153d-4578-e020-d1e54f28cd07"
+        "outputId": "31f43154-b81a-4d4d-8167-5304f1d5154f"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +351,7 @@
       "metadata": {
         "id": "ayc3piYsbutL"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -353,10 +365,197 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "A token is a piece of a text, and to tokenize a text means to split\n",
+        "it into pieces; that is, into a list of tokens.\n",
+        "\n",
+        "The most common kind of piece is a word.\n",
+        "\n",
+        "So, tokenizing a text usually means to\n",
+        "split it into words using the white space as a separator."
+      ],
       "metadata": {
         "id": "6w5mJGOFb1Ua"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence = \"I'm following the white rabbit\"\n",
+        "tokens = sentence.split(\" \")\n",
+        "tokens"
+      ],
+      "metadata": {
+        "id": "oFsqtdFkenM-",
+        "outputId": "a862b2d9-8f4f-4166-8635-2075d082426b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[\"I'm\", 'following', 'the', 'white', 'rabbit']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's do sentence tokenization, which means to split a text into its sentences."
+      ],
+      "metadata": {
+        "id": "3WGtMb-Qg2Lt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "corpus_alice = sent_tokenize(alice_text)\n",
+        "corpus_wizard = sent_tokenize(wizard_text)\n",
+        "\n",
+        "len(corpus_alice), (len(corpus_wizard))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cg1Kg0Ung7aq",
+        "outputId": "780981af-2913-433d-c34f-8c69b694a91a"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1612, 2240)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s check one sentence from the first corpus of text."
+      ],
+      "metadata": {
+        "id": "1qSQVckXh3aX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "corpus_alice[2]"
+      ],
+      "metadata": {
+        "id": "mWQQFsanh4GS",
+        "outputId": "80790704-3313-410d-89b5-f59a9da4c132",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'There was nothing so VERY remarkable in that; nor did Alice\\nthink it so VERY much out of the way to hear the Rabbit say to\\nitself, `Oh dear!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s check one sentence from the second corpus of text."
+      ],
+      "metadata": {
+        "id": "RIGvTC9-iFwp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "corpus_wizard[30]"
+      ],
+      "metadata": {
+        "id": "ojBtgVa1iGSs",
+        "outputId": "c4d176fa-5d3e-4407-f9bf-0613ceaff81c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\"There\\'s a cyclone coming, Em,\" he called to his wife.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Our dataset is going to be a collection of CSV files, one file for each book, with each\n",
+        "CSV file containing one sentence per line.\n",
+        "\n",
+        "Therefore, we need to:\n",
+        "\n",
+        "* clean the line breaks to make sure each sentence is on one line only;\n",
+        "* define an appropriate quote char to \"wrap\" the sentence such that the original commas and semicolons in the original text do not get misinterpreted as separation chars of the CSV file; and\n",
+        "* add a second column to the CSV file to\n",
+        "identify the original source of the sentence since we’ll be concatenating, and\n",
+        "shuffling the sentences before training a model on our corpora.\n",
+        "\n",
+        "The sentence above should end up looking like this:\n",
+        "```log\n",
+        "\\\"There's a cyclone coming, Em,\" he called to his wife.\\,wizoz10-1740.txt\n",
+        "```\n",
+        "\n",
+        "The function below does the grunt work of cleaning, splitting, and saving the\n",
+        "sentences to a CSV file for us:"
+      ],
+      "metadata": {
+        "id": "6_QMReIwkcaH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2BxVWK0Rk21Y"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
