--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPY0Ix+TGNsM/ezypHuxXJo",
+      "authorship_tag": "ABX9TyP8nuKwobIVx20k6t4oJJRe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "bPp9LPHbWch9"
       },
-      "execution_count": 1,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -106,9 +106,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db35c65b-3f74-4971-c614-839d0e205a1b"
+        "outputId": "1c5517a4-730c-48e7-8bdb-be69c9941132"
       },
-      "execution_count": 2,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 3,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -157,10 +157,33 @@
         "nltk.download('punkt')"
       ],
       "metadata": {
-        "id": "lrnHpAEYgrSS"
+        "id": "lrnHpAEYgrSS",
+        "outputId": "6ee3503a-2bdc-492a-a860-1aa7de98b088",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -174,7 +197,7 @@
       "metadata": {
         "id": "dEQBv2ddXGS_"
       },
-      "execution_count": 4,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -195,7 +218,7 @@
       "metadata": {
         "id": "w1HKtpREXdlF"
       },
-      "execution_count": 5,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -210,6 +233,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!rm -rf data"
+      ],
+      "metadata": {
+        "id": "4hr1Jm9kK9DO"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# let's download data\n",
         "HOME_DIR = \"data\"\n",
         "download_text(ALICE_URL, HOME_DIR)\n",
@@ -218,30 +252,30 @@
       "metadata": {
         "id": "eTXbiieBX4Sz"
       },
-      "execution_count": 6,
+      "execution_count": 37,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# let's see the downloaded data\n",
-        "!cat data/alice28-1476.txt"
+        "#!cat data/alice28-1476.txt"
       ],
       "metadata": {
         "id": "45chINE_YYtz"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!cat data/wizoz10-1740.txt"
+        "#!cat data/wizoz10-1740.txt"
       ],
       "metadata": {
         "id": "uM-tdJNRZcnt"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -269,7 +303,7 @@
       "metadata": {
         "id": "8z29BFQwZx4U"
       },
-      "execution_count": 16,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -277,16 +311,16 @@
       "source": [
         "print(alice_text[:500])\n",
         "print(\"\\n\", \"#\"*70, \"\\n\")\n",
-        "print(wizoz_text[:500])"
+        "print(wizard_text[:500])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tNZmtkHNahrp",
-        "outputId": "31f43154-b81a-4d4d-8167-5304f1d5154f"
+        "outputId": "e2673a04-8dc4-49ce-ea79-da71e2e5e028"
       },
-      "execution_count": 10,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +385,7 @@
       "metadata": {
         "id": "ayc3piYsbutL"
       },
-      "execution_count": 11,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -387,12 +421,12 @@
       ],
       "metadata": {
         "id": "oFsqtdFkenM-",
-        "outputId": "a862b2d9-8f4f-4166-8635-2075d082426b",
+        "outputId": "c43c9683-6fdb-4cb5-e57a-9f4ed86292ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,7 +436,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 43
         }
       ]
     },
@@ -428,9 +462,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cg1Kg0Ung7aq",
-        "outputId": "780981af-2913-433d-c34f-8c69b694a91a"
+        "outputId": "02685f55-5024-4485-8165-1b038344aa52"
       },
-      "execution_count": 17,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +474,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 44
         }
       ]
     },
@@ -460,13 +494,13 @@
       ],
       "metadata": {
         "id": "mWQQFsanh4GS",
-        "outputId": "80790704-3313-410d-89b5-f59a9da4c132",
+        "outputId": "7c54c7d7-415f-4284-e47e-140656ad2e62",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
         }
       },
-      "execution_count": 18,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,7 +513,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 45
         }
       ]
     },
@@ -499,13 +533,13 @@
       ],
       "metadata": {
         "id": "ojBtgVa1iGSs",
-        "outputId": "c4d176fa-5d3e-4407-f9bf-0613ceaff81c",
+        "outputId": "9d23260c-ff7f-44c0-a84f-33ff10c23738",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 19,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +552,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 46
         }
       ]
     },
@@ -550,12 +584,103 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def sentence_tokenize(source, quote_char=\"\\\\\", sep_char=\",\", include_header=True, include_source=True, extensions=(\"txt\"), **kwargs):\n",
+        "  # If source is a folder, goes through all files inside it that match the desired extensions ('txt' by default)\n",
+        "  if os.path.isdir(source):\n",
+        "    filenames = [f for f in os.listdir(source) if os.path.isfile(os.path.join(source, f)) and os.path.splitext(f)[1][1:] in extensions]\n",
+        "  elif isinstance(source, str):\n",
+        "    filenames = [source]\n",
+        "\n",
+        "  # If there is a configuration file, builds a dictionary with the corresponding start and end lines of each text file\n",
+        "  config_file = os.path.join(source, \"lines.cfg\")\n",
+        "  config = {}\n",
+        "  if os.path.exists(config_file):\n",
+        "    with open(config_file, \"r\") as f:\n",
+        "      rows = f.readlines()\n",
+        "    for r in rows[1:]:\n",
+        "      fname, start, end = r.strip().split(\",\")\n",
+        "      config.update({fname: (int(start), int(end))})\n",
+        "\n",
+        "  new_fnames = []\n",
+        "  # For each file of text\n",
+        "  for fname in filenames:\n",
+        "    # If there's a start and end line for that file, use it\n",
+        "    try:\n",
+        "        start, end = config[fname]\n",
+        "    except KeyError:\n",
+        "        start = None\n",
+        "        end = None\n",
+        "\n",
+        "    # Opens the file, slices the configures lines (if any)\n",
+        "    # cleans line breaks and uses the sentence tokenizer\n",
+        "    with open(os.path.join(source, fname), 'r') as f:\n",
+        "        contents = (''.join(f.readlines()[slice(start, end, None)]).replace('\\n', ' ').replace('\\r', ''))\n",
+        "    corpus = sent_tokenize(contents, **kwargs)\n",
+        "\n",
+        "    # Builds a CSV file containing tokenized sentences\n",
+        "    base = os.path.splitext(fname)[0]\n",
+        "    new_fname = f'{base}.sent.csv'\n",
+        "    new_fname = os.path.join(source, new_fname)\n",
+        "    with open(new_fname, 'w') as f:\n",
+        "        # Header of the file\n",
+        "        if include_header:\n",
+        "            if include_source:\n",
+        "                f.write('sentence,source\\n')\n",
+        "            else:\n",
+        "                f.write('sentence\\n')\n",
+        "        # Writes one line for each sentence\n",
+        "        for sentence in corpus:\n",
+        "            if include_source:\n",
+        "                f.write(f'{quote_char}{sentence}{quote_char}{sep_char}{fname}\\n')\n",
+        "            else:\n",
+        "                f.write(f'{quote_char}{sentence}{quote_char}\\n')\n",
+        "    new_fnames.append(new_fname)\n",
+        "\n",
+        "  # Returns list of the newly generated CSV files\n",
+        "  return sorted(new_fnames)"
+      ],
       "metadata": {
         "id": "2BxVWK0Rk21Y"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_fnames = sentence_tokenize(HOME_DIR)\n",
+        "new_fnames"
+      ],
+      "metadata": {
+        "id": "95M-z4GlFTgy",
+        "outputId": "fb78e5bc-b138-4d58-9834-aca3f04423f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['data/alice28-1476.sent.csv', 'data/wizoz10-1740.sent.csv']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Spacy sentence tokenization"
+      ],
+      "metadata": {
+        "id": "CAFblQB6MEge"
+      }
     }
   ]
 }
